Creating Resume Using HTML

--- a/index.html
+++ b/index.html
@@ -23,6 +23,22 @@
           <li>SSLC</li>
         </ol>
       </li>
+      <li>
+        <h2>Work Experience</h2>
+        <p>Fresher</p>
+      </li>
+      <li>
+        <h2>Skills</h2>
+        <ul>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JAVA SCRIPT</li>
+        </ul>
+      </li>
     </ul>
+    <footer>
+      <a href="about.html">About Us</a>
+      <a href="contact.html">Contact Us</a>
+    </footer>
   </body>
 </html>
